--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,11 @@
             <version>1.5.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
